--- a/src/main/resources/templates/shoping-cart.html
+++ b/src/main/resources/templates/shoping-cart.html
@@ -453,7 +453,7 @@
    error : function(jqXHR,status,error){
    if(jqXHR.status == '401'){
   alert("로그인 후 이용해 주세요.");
-    location.href='/loginForm';
+    location.href='members/loginForm';
    }else{
    console.log(error);
    }
@@ -486,7 +486,7 @@
 
     if(jqXHR.status == '401'){
     alert("로그인 후 이용해 주세요.");
-    location.href='/loginForm';
+    location.href='members/loginForm';
     }else{
     alert(jqXHR.responseJSON.message);
     }
@@ -525,7 +525,7 @@
  error : function(request,status,error){
  if(request.status == '401'){
     alert("로그인 후 이용해 주세요.");
-    location.href='/loginForm';
+    location.href='members/loginForm';
     }else{
     alert(request.responseText);
     console.log("message:" + request.responseText);
